--- a/blog/templates/header.html
+++ b/blog/templates/header.html
@@ -22,9 +22,9 @@
     <title>Mon blog</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar- bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar- bg-light ">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Myblog</a>
+          <a class="navbar-brand" href="{% url 'home' %}">Myblog</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -38,9 +38,6 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Admin</a>
               </li>
